refactor: use same method